prevented the form input from zooming on to users screen when focused on mobile device, by increasing the font size to a minimum of 16px

--- a/src/Pages/SignIn/SignIn.module.css
+++ b/src/Pages/SignIn/SignIn.module.css
@@ -14,6 +14,9 @@
     width: 70vw;
     margin-top: 15vw;
   }
+  input {
+    font-size: 16px;
+  }
 }
 @media screen and (max-width: 420px) {
   .page-content {
@@ -56,7 +59,8 @@
   padding: 0px 3px;
   transition: 0.5s top;
   font-size: 14px;
-  color: black;
+  font-weight: 500;
+  color: rgb(130, 130, 130);
 }
 .asterik {
   color: red;
@@ -83,7 +87,7 @@
   font-size: 13px;
   font-weight: 400;
   margin-bottom: 10px;
-  color: rgb(92, 92, 92);
+  color: rgb(66, 66, 66);
 }
 .sign-up {
   font-weight: 600;
