--- a/src/Pages/SignUp/SignUp.module.css
+++ b/src/Pages/SignUp/SignUp.module.css
@@ -14,6 +14,9 @@
     width: 60vw;
     margin-top: 5vw;
   }
+  input {
+    font-size: 16px;
+  }
 }
 @media screen and (max-width: 420px) {
   .page-content {
@@ -36,7 +39,6 @@
   padding: 3px 10px;
 }
 .input-section .label {
-  /* font-size: 14px; */
   position: absolute;
   top: 30px;
   left: 20px;
@@ -56,8 +58,8 @@
   padding: 0px 3px;
   transition: 0.5s top;
   font-size: 14px;
-  font-weight: 400;
-  color: black;
+  font-weight: 500;
+  color: rgb(130, 130, 130);
 }
 .asterik {
   color: red;
@@ -86,7 +88,7 @@
 .existing {
   font-size: 13px;
   font-weight: 400;
-  color: rgb(92, 92, 92);
+  color: rgb(66, 66, 66);
 }
 .signin {
   font-weight: 600;
